# educative-data-structures

./: .clang-tidy  .gitignore  CMakeLists.txt  README.md  conanfile.py
benchmark/: CMakeLists.txt  queue_array_benchmark.cpp  trie_benchmark.cpp
binary_search_tree/: CMakeLists.txt  binary_search_tree.hpp  main.cc
circular_queue/: CMakeLists.txt  circular_queue.hpp
cmake/: CompilerWarnings.cmake  Conan.cmake
graph/: CMakeLists.txt  graph.hpp  main.cc
hash_table/: hash_table.hpp  main.cc
heap/: main.cc  max_heap.hpp  min_heap.hpp
linkedlist/: CMakeLists.txt  linkedlist.hpp  main.cc  node.hpp
queue/: CMakeLists.txt  main.cc  queue.hpp
src/binary_search_tree/: binary_search_tree.hpp
src/circular_queue/: circular_queue.hpp  main.cc
src/dll_queue/: CMakeLists.txt  doubly_linked_list_queue.hpp  main.cc
src/doubly_linkedlist/: doubly_linkedlist.hpp  node.hpp
src/graph/: CMakeLists.txt  graph.hpp  main.cc
src/hash_table/: CMakeLists.txt  hash_table.hpp  main.cc
src/heap/: CMakeLists.txt  main.cc  max_heap.hpp  min_heap.hpp
src/linkedlist/: linkedlist.hpp  node.hpp
src/patterns_and_algorithms/: algorithms_patterns.hpp
src/queue/: main.cc  queue.hpp
src/stack/: main.cc  stack.hpp
src/trie/: CMakeLists.txt  main.cc  trie.hpp
stack/: CMakeLists.txt  main.cc  stack.hpp
test/: CMakeLists.txt  bst_test.cc  doubly_linkedlist_test.cc  graph_test.cc  linkedlist_test.cc  trie_test.cc
trie/: main.cc  trie.hpp
